tests/test_scope/bad/bad_sub_sub_scope.catala
## Article

```catala
new scope A:
  param x content int
  param u content bool

new scope B:
  param a1 scope A
  param a2 scope A
  param y content int

new scope C:
  param a scope A
  param b scope B
  param z content int

scope A:
 def x := 0
 def u := true

scope B:
  def a2.x [| a1.u |] := 1
  def y [| a2.x = 1 |] := 1
  def y [| a2.x + 1 = 2 |] := 1

scope C:
  def a.x := 2
  def b.y := 3
  def z := 2
```
